# Bleedless-Ticketing-API

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  script.js  temp.js  tsconfig.json  webpack.config.js
engine/: config.ini.template  config.py  driver.py  loginPage.py  main.py  playPage.py
src/core/: Seat.ts  SeatBuilder.ts  SeatRepository.ts  SeatSelector.ts  SeatService.ts  SeatValidator.ts  Theater.ts
src/core/@types/: app.d.ts
src/forms/interpark/: InterparkSeatForm.ts
src/forms/interpark/@types/: interpark.d.ts
src/forms/interpark/controllers/: InterparkRefreshButton.ts  InterparkSelectableSeats.ts  InterparkSubmitButton.ts
src/forms/interpark/parsers/: InterparkStySeatParser.ts
src/providers/interpark/: InterparkSeat.test.ts  InterparkSeat.ts
src/providers/interpark/@types/: interpark.d.ts
src/selectors/: RandomSeatSelector.ts  SimpleSeatSelector.ts
src/util/: NestedSelectorPath.ts
structures/: structure.puml  structure_by_feature.puml  structure_by_layer.puml
