[tool.poetry]
name = "bleedless-interpark-ticketing"
version = "0.1.0"
description = ""
authors = ["Hepheir <hepheir@gmail.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.1.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
